# AAE4011-LIU-ZHIHUA

./: README.md
aae4011_vehicle_detection/: CMakeLists.txt  package.xml  setup.py
aae4011_vehicle_detection/launch/: detect_from_bag.launch
aae4011_vehicle_detection/scripts/: bag_extract_and_report.py  bag_player_detector.py  extract_frames.py  launch_with_bag_picker.py  vehicle_detector_node.py
aae4011_vehicle_detection/src/aae4011_vehicle_detection/: __init__.py  bag_index.py  decode.py  detector.py  render.py
