cmake_minimum_required(VERSION 3.0.2)
project(aae4011_vehicle_detection)

find_package(catkin REQUIRED COMPONENTS
  rospy
  sensor_msgs
  cv_bridge
  image_transport
  rosbag
)

catkin_python_setup()

catkin_package()

catkin_install_python(PROGRAMS
  scripts/vehicle_detector_node.py
  scripts/bag_player_detector.py
  scripts/extract_frames.py
  scripts/bag_extract_and_report.py
  scripts/launch_with_bag_picker.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

install(DIRECTORY launch
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)

